# pulse-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  mise.toml  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: release.yml
crates/pulse-cli/: Cargo.toml
crates/pulse-cli/src/: main.rs  output.rs
crates/pulse-cli/src/commands/: ai.rs  db.rs  diag.rs  enrich.rs  feed.rs  group.rs  item.rs  mod.rs  search.rs  sync.rs  timeline.rs
crates/pulse-core/: Cargo.toml
crates/pulse-core/migrations/: M0001_initial.sql  M0002_fts_update_trigger.sql  M0003_add_note.sql
crates/pulse-core/src/: config.rs  error.rs  lib.rs  training.rs  types.rs
crates/pulse-core/src/ai/: fasttext.rs  labels.rs  miniml.rs  mod.rs  model_handle.rs  onnx.rs  rules.rs  tagger.rs  vision.rs  vision_labels.rs
crates/pulse-core/src/feeds/: detect.rs  enrich.rs  hackernews.rs  mod.rs  normalize.rs  reddit.rs  reddit_auth.rs  rss.rs
crates/pulse-core/src/search/: mod.rs
crates/pulse-core/src/storage/: actor.rs  connection.rs  migrations.rs  mod.rs  queries.rs
crates/pulse-core/src/sync/: health.rs  mod.rs  scheduler.rs
crates/pulse-core/src/timeline/: mod.rs
crates/pulse-core/tests/: tag_quality.rs
docs/: ai-pipeline.md  architecture.md  cli-ux.md  data-model.md  performance-budget.md  phase0-critique.md  sync-model.md  ui-adaptation-strategy.md  workspace-structure.md
scripts/: compute_clip_labels.py  export_mobileclip_labels.py  train_fasttext.py  train_miniml.py  update_labels_for_new_tags.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundled/fasttext-v2/: fasttext_thresholds.json
src-tauri/bundled/minilm/: miniml_thresholds.json  mlp_head.pmlp
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src/lib/: logger.ts  mock-data.ts  settings.svelte.ts  share.svelte.ts  store.svelte.ts  tokens.ts  types.ts  utils.ts
src/lib/components/: AiPanelContent.svelte  FilterStrip.svelte  GroupTabs.svelte  Icon.svelte  IconBtn.svelte  ItemRow.svelte  KeyCap.svelte  PulseBottomNav.svelte  ScoreBar.svelte  SettingsPanelContent.svelte  ShareSheet.svelte  SourceGlyph.svelte  Sparkline.svelte  StatusDot.svelte  TagChip.svelte  Thumb.svelte
src/lib/screens/: Desktop.svelte  Mobile.svelte  MobileAI.svelte  MobileReader.svelte  MobileSearch.svelte  MobileSettings.svelte  MobileSources.svelte  MobileTimeline.svelte
src/routes/: +layout.svelte  +page.svelte
