[workspace]
members = [
    "crates/pulse-core",
    "crates/pulse-cli",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Avinash Thakur <iamavinashthakur.at@gmail.com>"]
license = "MIT"
repository = "https://github.com/80avin/pulse-rs"
homepage = "https://github.com/80avin/pulse-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# IDs
uuid = { version = "1", features = ["v4", "v5"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Feed parsing
feed-rs = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# ONNX Runtime (optional, Phase 4)
# ort = { version = "2", optional = true }

# HuggingFace tokenizers (optional, Phase 4)
# tokenizers = { version = "0.19", optional = true }

# Regex for rule engine
regex = "1"

# HTML stripping
scraper = "0.21"
