[workspace]
members = [
    "crates/pulse-core",
    "crates/pulse-cli",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Avinash Thakur <iamavinashthakur.at@gmail.com>"]
license = "MIT"
repository = "https://github.com/80avin/pulse-rs"
homepage = "https://github.com/80avin/pulse-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# IDs
uuid = { version = "1", features = ["v4", "v5"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP — rustls-tls required for Android (no system OpenSSL); stream for incremental download progress
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Feed parsing
feed-rs = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# ONNX Runtime — enabled via ai-onnx feature flag in pulse-core
# rc.12 upgrades Android binary from ORT 1.23.2 → 1.26.0 (fixes libstdc++ ABI mismatch)
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

# HuggingFace tokenizers — for BERT/MiniLM tokenization
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }

# Regex for rule engine
regex = "1"

# HTML stripping
scraper = "0.21"

# Image decode + resize for CLIP vision pipeline
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
