[package]
name = "pulse-rs"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pulse — a local-first, privacy-first feed reader with on-device AI classification"
edition = "2024"

[lib]
name = "pulse_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# pulse-core provides: sync, storage, AI pipeline, model management
pulse-core = { path = "../crates/pulse-core", features = ["ai-onnx", "ai-vision", "ai-fasttext", "ai-miniml"] }

# Force bundled SQLite so Android doesn't need a system libsqlite3
libsqlite3-sys = { version = "0.28", features = ["bundled"] }

# reqwest for model download (rustls-tls = Android compatible)
reqwest = { workspace = true }

# UUID generation for new feed IDs
uuid = { workspace = true }

# Streaming helpers for incremental download progress
futures-util = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
