[package]
name = "pulse-core"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for Pulse — local-first feed reader with on-device AI classification"
edition = "2024"

[lib]
name = "pulse_core"

[features]
default = ["sync", "search", "ai-rules"]
sync = []
search = []
ai-rules = []
# ai-onnx = ["dep:ort", "dep:tokenizers"]  # Phase 4

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
feed-rs = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
