[package]
name = "pulse-core"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for Pulse — local-first feed reader with on-device AI classification"
edition = "2024"

[lib]
name = "pulse_core"

[features]
default = ["sync", "search", "ai-rules"]
sync = []
search = []
ai-rules = []
ai-onnx = ["dep:ort", "dep:tokenizers"]
ai-vision = ["dep:ort", "dep:image"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
feed-rs = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
scraper = { workspace = true }
futures = "0.3"
ort = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
image = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
